--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -1,20 +1,26 @@
-<!--
-1 - Modifique o tamanho do h1 para 65 pixels
-2 - Modifique a cor do texto do h1 para laranja
-3 - Modifique a cor de fundo da lista não ordenada
-4 - Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo
--->
-
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+      body{
+        font-size: 16px;
+      }
+
       h1 {
-        font-size: 65px;             /* Exercicio 1 */     
-        color: orange;            /* Exercicio 2 */
-        background-color: black; /* Exercicio 3 */
+        font-size: 65px;               
+        color: orange;            
+        background-color: black; 
+        font-family: sans-serif;
+      }
+      p {
+        font-weight: 600;
+        font-size: 3em;
+        font-style: oblique;
+        line-height: 60px;
+        text-align: center;
+        text-decoration:underline;
       }
       .bg-color {                /* Exercicio 4 */
         background-color: cadetblue;
