--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,30 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-      body{
-        font-size: 16px;
-      }
-
-      h1 {
-        font-size: 65px;               
-        color: orange;            
-        background-color: black; 
-        font-family: sans-serif;
-      }
-      p {
-        font-weight: 600;
-        font-size: 3em;
-        font-style: oblique;
-        line-height: 60px;
-        text-align: center;
-        text-decoration:underline;
-      }
-      .bg-color {                /* Exercicio 4 */
-        background-color: cadetblue;
-      }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
