--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/index.html
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Portifolio</title>
-    <link rel="style/sheet" type="text/css" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="text-align: center">Giuseppe Uhlmann de Souza Nunes</h1>
-    <img id="foto" style="display:block; margin: 0 auto; border-radius: 50%;" src="https://pbs.twimg.com/profile_images/1481666338959540224/9mVyyzzN_400x400.jpg" alt="foto de Giuseppe" width="200px">
+    <h1>Giuseppe Uhlmann de Souza Nunes</h1>
+    <img id="foto" src="https://pbs.twimg.com/profile_images/1481666338959540224/9mVyyzzN_400x400.jpg" alt="foto de Giuseppe" width="200px">
 
     <p id="sobre-mim" style="text-align: center">Olá, eu sou o <strong>Giuseppe</strong>! Tenho 21 anos, sou de Curitiba-PR. Atualmente estudante de <strong>Desenvolvimento Web na Trybe.</strong>
     <br>Amo <strong>tecnologia, programação e inventar coisas novas.</strong> No meu tempo livre gosto de jogar, assistir filmes e séries</p>
