alteracao de cor e mudanca de style

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/index.html
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/index.html
@@ -11,14 +11,16 @@
 
     <p id="sobre-mim" style="text-align: center">Olá, eu sou o <strong>Giuseppe</strong>! Tenho 21 anos, sou de Curitiba-PR. Atualmente estudante de <strong>Desenvolvimento Web na Trybe.</strong>
     <br>Amo <strong>tecnologia, programação e inventar coisas novas.</strong> No meu tempo livre gosto de jogar, assistir filmes e séries</p>
-    <h3 id="habilidades" style="text-align: center">Habilidades</h3>
-    <ul style="display:table; margin: 0 auto">
-        <li>C++</li>
-        <li>Python</li>
-        <li>HTML 5</li>
-        <li>CSS 3</li>
-        <li>MySQL</li>
-    </ul>
+    <h3 id="habilidades">Habilidades</h3>
+    <div class="hab-itens">
+        <ul>
+            <li>C++</li>
+            <li>Python</li>
+            <li>HTML 5</li>
+            <li>CSS 3</li>
+            <li>MySQL</li>
+        </ul>
+    </div>
     <br>
     <nav class="menu">
         <ul>
