adicionando hover e active

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-3/index.html
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-3/index.html
@@ -10,9 +10,9 @@
     <p>Top 3 dos melhores sites que existem na web</p>
     <p>Principais motivos para eu gostar deles</p>
     <ol>
-        <li><a href="https://filipedeschamps.com.br/">Filipe Deschamps</a></li>
-        <li><a href="https://stackoverflow.com/">Stackoverflow</a></li>
-        <li><a href="https://www.freepik.com/popular-photos">Freepik</a></li>
+        <li>Filipe Deschamps</li>
+        <li>Stackoverflow</li>
+        <li>Freepik</li>
     </ol>
   </body>
 </html>
