adicionando lista nao ordenada

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-3/index.html
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-3/index.html
@@ -14,5 +14,11 @@
         <li>Stackoverflow</li>
         <li>Freepik</li>
     </ol>
+    <p>Características que eu gosto</p>
+    <ul>
+        <li>Pessoas alegres</li>
+        <li>Pessoas simpáticas</li>
+        <li>Pessoas inteligentes</li>
+    </ul>
   </body>
 </html>
