--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/index.html
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
-        <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+        <h1 class="titulo">Soco a 80km/h: Conheça o Stomatopoda.</h1>
         <section>
-            <nav>
+            <nav class="menu">
                 <ul>
                     <li><a href="#">Página Inicial</a></li>
                     <li><a href="#">Sobre</a></li>
