corrigindo lista para tabela

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/index.html
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/index.html
@@ -30,14 +30,32 @@
                     <img src="https://pm1.narvii.com/6502/0872de236946b41075bb4e8013a692a1de60251f_hq.jpg" alt="imagem do Stomatopoda">
                     <aside class="class-cient">
                         <h3>Classificação científica</h3>
-                        <ul>
-                            <li>Reino: Animalia</li>
-                            <li>Filo: Arthropoda</li>
-                            <li>Subfilo: Crustacea </li>
-                            <li>Classe:	Malacostraca</li>
-                            <li>Subclasse: Hoplocarida</li>
-                            <li>Ordem: Stomatopoda</li>
-                        </ul>
+                        <table>
+                            <tr>
+                                <td>Reino:</td>
+                                <td>Animalia</td>
+                            </tr>    
+                            <tr>
+                                <td>Filo</td>
+                                <td>Arthropoda</td>
+                            </tr>
+                            <tr>
+                                <td>Subfilo:</td>
+                                <td>Crustacea</td>
+                            </tr>
+                            <tr>
+                                <td>Classe:</td>
+                                <td>Malacostraca</td>
+                            </tr>
+                            <tr>
+                                <td>Subclasse:</td>
+                                <td>Hoplocarida</td>                               
+                            </tr>
+                            <tr>
+                                <td>Ordem:</td>
+                                <td>Stomatopoda</td>
+                            </tr>                       
+                        </table>
                     </aside>                  
                 </section>
                 <section class="superpoder">
