adicionando ex fixacao 2

--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-1-html-e-css-forms/exercicios-fixacao/ex-1/index.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-1-html-e-css-forms/exercicios-fixacao/ex-1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main>
-    <form action="get">
+    <form method="GET">
       <label for="input-user">Email <input type="email" name="user" placeholder="Digite seu email" autocomplete="off" id="input-user" autofocus required></label>
       <br>
       <br>
