--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-2-html-e-css-bibliotecas-js-e-frameworks-css/index.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-2-html-e-css-bibliotecas-js-e-frameworks-css/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="dist/css/DatePickerX.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>TrybeTrip</title>
@@ -35,7 +36,8 @@
         </div>
         <br>
         <label class="row" for="input-melhor-data">Qual a melhor data para realizar sua viagem?
-          <input class="form-control" type="date" name="melhor-data" id="melhor-data">
+          <input type="text" id="datepicker" class="form-control" name="min" placeholder="Escolha a data de ida">
+          <input type="text" id="datepicker" class="form-control" name="max" placeholder="Escolha a data de volta">
         </label>
         <br>
         <div class="form-check">
@@ -53,11 +55,9 @@
           <button type="submit" id="enviar" class="col col-lg-4 btn btn-success mx-auto">Enviar</button>
           <button id="limpar" class="col col-lg-4 btn btn-warning mx-auto">Limpar</button>
         </div>
-        <div>
-          <input type="text" class="data">
-        </div>
       </form>
   </main>
+  <script src="dist/js/DatePickerX.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
