--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-2-bibliotecas-js-e-frameworks-css/index.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-2-bibliotecas-js-e-frameworks-css/index.html
@@ -36,8 +36,8 @@
         </div>
         <br>
         <label class="row" for="input-melhor-data">Qual a melhor data para realizar sua viagem?
-          <input type="text" id="datepicker" class="form-control" name="min" placeholder="Escolha a data de ida">
-          <input type="text" id="datepicker" class="form-control" name="max" placeholder="Escolha a data de volta">
+          <input class="form-control" type="text" id="datepicker"  name="min" placeholder="Escolha a data de ida">
+          <input class="form-control" type="text" id="datepicker"  name="max" placeholder="Escolha a data de volta">
         </label>
         <br>
         <div class="form-check">
